[package]
name = "maroz"
version = "0.1.0"
authors = ["Aleksey Zhidkov <aleksey.zhidkov@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "0.1.4"
volatile = "0.1.0"
spin = "0.3.4"
multiboot2 = "0.1.0"
bitflags = "0.7.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"